syntax="proto3";
package ruft;

service raft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

/* message ServerPersistentState { */
/*   uint64 term = 1; */
/*   uint64 voted_for = 2; */
/*   repeated bytes logs = 3; */
/* } */

/* message ServerVolatileState { */
/*   // 已同步至过半节点上的日志条目的索引 */
/*   uint64 committed_index = 1; */
/*   // 已应用至状态机上的日志条目的索引 */
/*   uint64 applied_index = 2; */
/* } */

/* message LeaderVolatileState { */
/*   // ID, LogIndex */
/*   // next log index to be send */
/*   map<uint64, uint64> next_index = 1; */
/*   // highest match log index */
/*   map<uint64, uint64> matched_index = 2; */
/* } */

message AppendEntriesRequest {
  uint32 term = 1;
  uint32 leader_id = 2;
  // entries 上一条日志的任期和索引
  LogID prev_log  = 3;
  repeated Log entries = 4;
  uint64 leader_committed_index = 5;
}

message AppendEntriesResponse {
  uint32 term = 1;
  bool success = 2; 
}

message RequestVoteRequest {
  uint32 term = 1;
  uint32 candidate_id = 2;
  LogID last_log_id = 3;
}

message RequestVoteResponse {
  uint32 term = 1;
  bool granted = 2;
}

message Log {
  LogID id = 1;
  bytes content = 2;
}

message LogID {
  // 当前日志的任期
  uint32 term = 1;
  // 日志的索引
  uint64 index = 2;
}

